API dokumentation på Main flask
Ändrat strukutur så att main hanterar samma flask applikation som allt annat
